# serializer version: 1
# name: TestAssetDataProcessing.test_asset_creation_with_complex_metadata[0]
  dict({
    'asset_key': 'analytics/complex_table',
    'asset_key_parts': list([
      'analytics',
      'complex_table',
    ]),
    'dependency_keys': list([
    ]),
    'description': 'Complex asset with various metadata types',
    'group_name': 'analytics',
    'id': 'complex-asset',
    'kinds': list([
      'dbt',
      'table',
      'materialized',
    ]),
    'metadata_entries': list([
      dict({
        'description': 'Some text',
        'label': 'text_meta',
        'text': 'example_text',
      }),
      dict({
        'description': 'Documentation',
        'label': 'url_meta',
        'url': 'https://docs.example.com',
      }),
      dict({
        'description': 'File path',
        'label': 'path_meta',
        'path': '/data/warehouse/table.sql',
      }),
      dict({
        'description': 'Config',
        'jsonString': '{"key": "value"}',
        'label': 'json_meta',
      }),
      dict({
        'description': 'Notes',
        'label': 'markdown_meta',
        'mdStr': '''
          # Notes
          This is markdown
        ''',
      }),
      dict({
        'description': 'Python class',
        'label': 'python_meta',
        'module': 'mymodule',
        'name': 'MyClass',
      }),
      dict({
        'description': 'Score',
        'floatValue': 95.5,
        'label': 'float_meta',
      }),
      dict({
        'description': 'Count',
        'intValue': 42,
        'label': 'int_meta',
      }),
      dict({
        'boolValue': True,
        'description': 'Is active',
        'label': 'bool_meta',
      }),
    ]),
    'status': None,
  })
# ---
# name: TestFormatAssetEvents.test_format_asset_events_json_output[0]
  dict({
    'items': list([
      dict({
        'event_type': 'ASSET_MATERIALIZATION',
        'metadata_entries': list([
          dict({
            'description': 'Rows',
            'intValue': 5000,
            'label': 'row_count',
          }),
        ]),
        'partition': '2024-01-31',
        'run_id': 'run-abc-123',
        'tags': list([
          dict({
            'key': 'dagster/partition',
            'value': '2024-01-31',
          }),
        ]),
        'timestamp': '1706745600000',
      }),
      dict({
        'event_type': 'ASSET_OBSERVATION',
        'metadata_entries': list([
          dict({
            'description': 'Minutes',
            'floatValue': 12.5,
            'label': 'freshness',
          }),
        ]),
        'partition': None,
        'run_id': 'run-def-456',
        'tags': list([
        ]),
        'timestamp': '1706659200000',
      }),
      dict({
        'event_type': 'ASSET_MATERIALIZATION',
        'metadata_entries': list([
        ]),
        'partition': '2024-01-29',
        'run_id': 'run-ghi-789',
        'tags': list([
          dict({
            'key': 'dagster/partition',
            'value': '2024-01-29',
          }),
        ]),
        'timestamp': '1706572800000',
      }),
    ]),
  })
# ---
# name: TestFormatAssetEvents.test_format_asset_events_text_output[0]
  '''
  TIMESTAMP            TYPE                      RUN_ID                                   PARTITION           
  ------------------------------------------------------------------------------------------------------------
  2024-02-01 00:00:00 UTC ASSET_MATERIALIZATION     run-abc-123                              2024-01-31          
  2024-01-31 00:00:00 UTC ASSET_OBSERVATION         run-def-456                                                  
  2024-01-30 00:00:00 UTC ASSET_MATERIALIZATION     run-ghi-789                              2024-01-29          
  
  Total events: 3
  '''
# ---
# name: TestFormatAssetEvents.test_format_empty_asset_events_json_output[0]
  dict({
    'items': list([
    ]),
  })
# ---
# name: TestFormatAssetEvents.test_format_empty_asset_events_text_output[0]
  'No events found.'
# ---
# name: TestFormatAssets.test_format_asset_without_metadata[0]
  '''
  Asset Key: simple
  ID: simple-asset
  Description: None
  Group: default
  Kinds: None
  Deps: None
  '''
# ---
# name: TestFormatAssets.test_format_assets_json_output[0]
  dict({
    'cursor': 'next_cursor',
    'has_more': True,
    'items': list([
      dict({
        'asset_key': 'users',
        'asset_key_parts': list([
          'users',
        ]),
        'dependency_keys': list([
        ]),
        'description': 'User data table',
        'group_name': 'core_tables',
        'id': 'asset-1',
        'kinds': list([
          'dbt',
          'table',
        ]),
        'metadata_entries': list([
          dict({
            'description': 'data-team',
            'label': 'owner',
          }),
          dict({
            'description': '1000000',
            'intValue': 1000000,
            'label': 'rows',
          }),
        ]),
        'status': None,
      }),
      dict({
        'asset_key': 'analytics/user_metrics',
        'asset_key_parts': list([
          'analytics',
          'user_metrics',
        ]),
        'dependency_keys': list([
        ]),
        'description': 'Aggregated user metrics',
        'group_name': 'analytics',
        'id': 'asset-2',
        'kinds': list([
          'dbt',
          'view',
        ]),
        'metadata_entries': list([
        ]),
        'status': None,
      }),
    ]),
  })
# ---
# name: TestFormatAssets.test_format_assets_text_output[0]
  '''
  Asset Key: users
  ID: asset-1
  Description: User data table
  Group: core_tables
  Kinds: dbt, table
  Deps: None
  
  Asset Key: analytics/user_metrics
  ID: asset-2
  Description: Aggregated user metrics
  Group: analytics
  Kinds: dbt, view
  Deps: None
  '''
# ---
# name: TestFormatAssets.test_format_empty_assets_json_output[0]
  dict({
    'cursor': None,
    'has_more': False,
    'items': list([
    ]),
  })
# ---
# name: TestFormatAssets.test_format_empty_assets_text_output[0]
  ''
# ---
# name: TestFormatAssets.test_format_single_asset_json_output[0]
  dict({
    'asset_key': 'users',
    'asset_key_parts': list([
      'users',
    ]),
    'dependency_keys': list([
    ]),
    'description': 'User data table',
    'group_name': 'core_tables',
    'id': 'asset-1',
    'kinds': list([
      'dbt',
      'table',
    ]),
    'metadata_entries': list([
      dict({
        'description': 'data-team',
        'label': 'owner',
      }),
      dict({
        'description': 'public',
        'label': 'schema',
        'text': 'public',
      }),
    ]),
    'status': None,
  })
# ---
# name: TestFormatAssets.test_format_single_asset_text_output[0]
  '''
  Asset Key: users
  ID: asset-1
  Description: User data table
  Group: core_tables
  Kinds: dbt, table
  Deps: None
  
  Metadata:
    owner: data-team
    schema: public
  '''
# ---
